@@ -459,6 +459,7 @@ class SnmpV3MessageProcessingModel(AbstractMessageProcessingModel):
                 wholeMsg, asn1Spec=self._snmpMsgSpec
                 )
         except PyAsn1Error:
+            debug.logger & debug.flagMP and debug.logger('prepareDataElements: %s' % (sys.exc_info()[1],))
             snmpInASNParseErrs, = snmpEngine.msgAndPduDsp.mibInstrumController.mibBuilder.importSymbols('__SNMPv2-MIB', 'snmpInASNParseErrs')
             snmpInASNParseErrs.syntax = snmpInASNParseErrs.syntax + 1
             raise error.StatusInformation(
